tests/syntax-errors/simple_error.arl
archetype simple_error

action funerror {
  effect {
    f(); transition; g()
  }
}
